--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,18 @@ background:#27323a ;
 .bg-dark:hover .span-1 {
     top: 3px;
 }
+.section-4 {
+    background: #283139;
+}
+.bii {
+    font-size: 6rem;
+    color: #ec6d5f;
+}
+.biii {
+    font-size:6rem;
+    color: #1fa0e3;
+}
+.biit {
+    font-size: 6rem;
+    color: #47bfa4;
+}
