--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,3 +167,12 @@ footer li::before {
     color: thistle;
     font-size: 7rem;
  }
+ .bi-1 {
+     position: relative;
+     animation: mymove 2s infinite;
+ }
+ @keyframes mymove {
+    0% {bottom: 0px;}
+    0% {bottom: 0; left: 40px;}
+    100% {top: 50px;}
+  }
